@@ -93,6 +93,10 @@ div{
           <li>2x Xeon E5-2420 @ 1.90GHz</li>
         </ul>
       </p>
+
+      <h1>Software</h1>
+      <p>This website was written in HTML5, CSS, and Javascript is used at times. It runs on <b>Trunas Scale</b>. You can view the source code for the website</p>
+      <a>Here</a>
       </div>
 
 
